--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "jquery",
+  "name": "react-crud",
   "version": "1.0.0",
   "description": "Can use node.js http-server for serving this; or nginx, etc",
   "main": "test-index.jsx",
   "dependencies": {
-    "csvjson": "^4.0.2",
-    "http-server": "^0.9.0"
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "axios": "^0.15.3",
+    "react-bootstrap": "^0.31.0"
   },
   "devDependencies": {
-    "axios": "^0.15.3",
     "babel": "^6.23.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^6.4.1",
     "babel-preset-react": "^6.24.1",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "webpack": "^2.6.1"
+    "webpack": "^2.6.1",
+    "http-server": "^0.9.0"
   }
 }
