--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Can use node.js http-server for serving this; or nginx, etc",
   "main": "test-index.jsx",
+  "scripts": {
+    "test": "jasmine"
+  },
   "dependencies": {
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
@@ -14,6 +17,7 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^6.4.1",
     "babel-preset-react": "^6.24.1",
+    "jasmine": "^2.6.0",
     "webpack": "^2.6.1",
     "http-server": "^0.9.0"
   }
